--- a/board/views/common/partials/nav.ejs
+++ b/board/views/common/partials/nav.ejs
@@ -20,7 +20,7 @@
          <li><a href="/logout">Logout</a></li>
         <% } else { %>
          <li><a href="/join">Sign Up</a></li>
-         <li><a href="/login">Login</a></li>
+         <li><a href="/user/login">Login</a></li>
         <% } %>
        </ul>
      </div>
